Preventing unwanted external scrollbars

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,12 @@ html {
   color: var(--text);
 }
 
+body {
+  all: unset;
+  width: 100vw;
+  height: 100vh;
+}
+
 path.red {
   fill: var(--red);
 }
